--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".VisionActivity"></activity>
         <activity android:name=".CameraActivity" android:screenOrientation="landscape"></activity>
-        <activity android:name=".CameraPreview" android:screenOrientation="landscape"></activity>
+        <activity android:name=".helpers.CameraPreviewActivity" android:screenOrientation="landscape"></activity>
         <activity android:name=".MainActivity" android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
