--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:supportsRtl="true"
         tools:ignore="LockedOrientationActivity"
         android:theme="@style/AppTheme">
-        <activity android:name=".VisionActivity"></activity>
-        <activity android:name=".CameraActivity" android:screenOrientation="landscape"></activity>
+        <activity android:name=".CameraActivity"></activity>
         <activity android:name=".helpers.CameraPreviewActivity" android:screenOrientation="landscape"></activity>
         <activity android:name=".MainActivity" android:screenOrientation="landscape">
             <intent-filter>
