--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         tools:ignore="LockedOrientationActivity"
         android:theme="@style/AppTheme">
         <activity android:name=".CameraActivity"></activity>
-        <activity android:name=".helpers.CameraPreviewActivity" android:screenOrientation="landscape"></activity>
-        <activity android:name=".MainActivity" android:screenOrientation="landscape">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
